Updates from Overleaf

--- a/thesis/paper/sections/abstract.tex
+++ b/thesis/paper/sections/abstract.tex
@@ -1,3 +1,5 @@
 \section*{Abstract}
 
+Testing
+
 From a feature-based standpoint, many front-end systems share similar patterns but implement them in their own ways. The correctness and completeness, as well as the intentions of these implementations relies mostly on the developer due to the lack of a systematic enforcement mechanism for quality control and standards in the open market. Moreover, one who aims to add value with their data and services needs to build accessible front-end applications with best practices that are optimized for different devices and screens; oftentimes resulting in inconsistent, unstable and low quality byproducts. The aforementioned problems entails a bad user experience and brings along security and privacy concerns for the users; and increases costs and efforts significantly for the providers. To address all these problems we propose Intertext, an open platform that offers an alternative front-end for providers and a private and secure unified viewing experience for the end-users. Intertext allows developers to generate and serve the description of their front-ends from a generic backend endpoint in Intertext UIDL (User-Interface Description Language), a JSON-based syntax to “describe” fully functional front-ends agnostic of style, layout, device and environment by composing a given set of components and commands. It also offers client-side applications built and optimized for multiple different platforms and devices, that can receive Intertext UIDL and render user interfaces in the most appropriate way based on the host device and environment.
