--- a/thesis/paper/sections/abstract.tex
+++ b/thesis/paper/sections/abstract.tex
@@ -1,5 +1,18 @@
+
+
 \section*{Abstract}
 
-Testing
+Intertext proposes a novel approach to how front-end systems are developed and consumed by users. It consists of Intertext User Interface Description Language (IUIDL): a device, design and style agnostic XML-based markup language; and a family of software clients for web, mobile, desktop and various other platforms that can render IUIDL into fully functional front-ends.
 
-From a feature-based standpoint, many front-end systems share similar patterns but implement them in their own ways. The correctness and completeness, as well as the intentions of these implementations relies mostly on the developer due to the lack of a systematic enforcement mechanism for quality control and standards in the open market. Moreover, one who aims to add value with their data and services needs to build accessible front-end applications with best practices that are optimized for different devices and screens; oftentimes resulting in inconsistent, unstable and low quality byproducts. The aforementioned problems entails a bad user experience and brings along security and privacy concerns for the users; and increases costs and efforts significantly for the providers. To address all these problems we propose Intertext, an open platform that offers an alternative front-end for providers and a private and secure unified viewing experience for the end-users. Intertext allows developers to generate and serve the description of their front-ends from a generic backend endpoint in Intertext UIDL (User-Interface Description Language), a JSON-based syntax to “describe” fully functional front-ends agnostic of style, layout, device and environment by composing a given set of components and commands. It also offers client-side applications built and optimized for multiple different platforms and devices, that can receive Intertext UIDL and render user interfaces in the most appropriate way based on the host device and environment.
+Today, we often see the same repeating patterns in front-end systems, from the components that make up the user interface to features and practices such as navigation, routing and state management. It is not uncommon for developers to reimplement these patterns repeatedly, and due to the lack of a systematic enforcement mechanism in the open market, these implementations' correctness and completeness rely primarily on the developer. A proper online representation requires the developer to build accessible front-end applications with best practices optimized for various devices, browsers, screens and platforms, often resulting in high costs or inconsistent, insecure and low-quality byproducts. From a users perspective, this entails a poor user experience and bring potential security and privacy concerns. 
+
+In order to address these problems, we propose Intertext. IUIDL provides a set of UI components and a layout system to create user interfaces. It includes input components to take user input and make interactive applications; brings commands to handle data, manage application state and much more. It supports interpolation and derived views from the application state. IUIDL can be assembled and served from a generic backend...
+
+
+IUIDL is free and agnostic of style,  
+
+IUIDL provides a set of building blocks to declare fully-functional user interfaces
+
+To address all these problems we propose Intertext, an open platform that offers an alternative front-end for providers and a private and secure unified viewing experience for the end-users. Intertext allows developers to generate and serve the description of their front-ends from a generic backend endpoint in Intertext UIDL (User-Interface Description Language), a JSON-based syntax to "describe" fully functional front-ends agnostic of style, layout, device and environment by composing a given set of components and commands. It also offers client-side applications built and optimized for multiple different platforms and devices, that can receive Intertext UIDL and render user interfaces most properly based on the host device and environment.
+
+
