--- a/thesis/paper/sections/intertext.tex
+++ b/thesis/paper/sections/intertext.tex
@@ -2,6 +2,9 @@
 
 \chapter{Intertext}
 
+TODO: 
+Today, we often see the same repeating patterns in front-end applications, from the components that make up the user interface to features and practices such as navigation, routing and state management. Consequently, 
+
 Intertext is a platform based on a very simple premise, it is a family of front-end applications that can interpret Intertext UIDL (User Interface Description Language), and generate appropriate front-ends for the host platform. Simply put, a provider wanting to create an Intertext application will create a generic backend that generates Intertext UIDL, and serves it from an endpoint, say at intertext.example.com. And users who wish to use this application will, just like in a web browser, pull up an Intertext client and visit the domain intertext.example.com. The Intertext client will then make a request to this domain and fetch the Intertext UIDL served by this endpoint, and generate the user interface as per the instructions received. Moreover, rather than rendering a simple static view it will perform some tasks such as accepting user input, navigating to different screens, making additional requests to fetch more data, keeping the UI updated and reading and writing some data to users local storage; all of which will again be orchestrated based on the instructions received by the backend in Intertext UIDL syntax. Intertext will have multiple software clients built natively for various platforms that can interpret Intertext UIDL in the most appropriate way; for instance users browsing an Intertext app through the smartphone app will receive an experience optimized for touch screens, command-line interface client users will receive an optimized experience for the command line, or a user browsing from a low-end device with limited capabilities will use the version optimized for low-performance devices to get a comfortable viewing experience. 
 
 Intertext gives providers a set of components to build and serve their UIs for their services. It is agnostic of what this service is, and given the involvement of a backend to handle all the logic, this service can be anything. In other words; users can enjoy their todo lists, habit tracker, notes, calendar, email client, social apps, news, weather etc. all through one single app, using the Intertext client of their choice. Providers can describe the components their user interface should consist of using Intertext UIDL, in a way that is agnostic of their styles. For instance, providers could specify using a “Call To Action” component, and specify certain properties such as what it should say and what it should do, but they cannot decide how it should look. Having a unified set of UI components brings many advantages, most notably consistency. Every single application on Intertext will look and feel the same, made out of components that users are familiar with. Customizability is another major advantage, users will be able to adjust the look and feel of these components, allowing them to personalize their browsing to their likings all across the platform applications. Last but not least, all components will come with accessibility built in. This is particularly important that with this approach, the accessibility implementations are not left to the developers responsibility, therefore users that are in need of certain accessibility aspects will be guaranteed to have the accessibility features they need for every single application on the Intertext platform. Moreover, Intertext will be an open platform, and Intertext UIDL will be well documented for developers to build client applications, allowing the community to develop very specific client applications that can interpret Intertext UIDL in meaningful ways to respond to very specific needs. Whether it is a VUI (Voice User Interface) client, a Tangible UI client, or even clients built for particular devices with specific requirements for targeting various communities or use cases, they will all be able to support all existing Intertext applications served from backend services.  
