--- a/thesis/paper/sections/abstract.tex
+++ b/thesis/paper/sections/abstract.tex
@@ -4,15 +4,6 @@
 
 Intertext proposes a novel approach to how front-end systems are developed and consumed by users. It consists of Intertext User Interface Description Language (IUIDL): a device, design and style agnostic XML-based markup language; and a family of software clients for web, mobile, desktop and various other platforms that can render IUIDL into fully functional front-ends.
 
-Today, we often see the same repeating patterns in front-end systems, from the components that make up the user interface to features and practices such as navigation, routing and state management. It is not uncommon for developers to reimplement these patterns repeatedly, and due to the lack of a systematic enforcement mechanism in the open market, these implementations' correctness and completeness rely primarily on the developer. A proper online representation requires the developer to build accessible front-end applications with best practices optimized for various devices, browsers, screens and platforms, often resulting in high costs or inconsistent, insecure and low-quality byproducts. From a users perspective, this entails a poor user experience and bring potential security and privacy concerns. 
+Today, we often see the same repeating patterns in front-end systems, from the components that make up the user interface to features and practices such as navigation, routing and state management. It is not uncommon for developers to re-implement these patterns repeatedly, and due to the lack of a systematic enforcement mechanism in the open market, these implementations' correctness and completeness rely primarily on the developer. A proper online representation nowadays requires the developer to build accessible front-end applications with best practices optimized for various devices, browsers, screens and platforms, often resulting in high costs or inconsistent, insecure and low-quality byproducts. From a users perspective, this entails a poor user experience and bring potential security and privacy concerns. 
 
-In order to address these problems, we propose Intertext. IUIDL provides a set of UI components and a layout system to create user interfaces. It includes input components to take user input and make interactive applications; brings commands to handle data, manage application state and much more. It supports interpolation and derived views from the application state. IUIDL can be assembled and served from a generic backend...
-
-
-IUIDL is free and agnostic of style,  
-
-IUIDL provides a set of building blocks to declare fully-functional user interfaces
-
-To address all these problems we propose Intertext, an open platform that offers an alternative front-end for providers and a private and secure unified viewing experience for the end-users. Intertext allows developers to generate and serve the description of their front-ends from a generic backend endpoint in Intertext UIDL (User-Interface Description Language), a JSON-based syntax to "describe" fully functional front-ends agnostic of style, layout, device and environment by composing a given set of components and commands. It also offers client-side applications built and optimized for multiple different platforms and devices, that can receive Intertext UIDL and render user interfaces most properly based on the host device and environment.
-
-
+In order to address these problems, we propose Intertext. IUIDL provides a layout system and User Interface (UI) components that include input components to take user inputs and make applications interactive. It comes with commands that enable sending, receiving and handling data, managing application state, routing and much more. It supports interpolations and views derived from the application state. IUIDL can be assembled and served from a generic backend, where the business logic of the application shall live. Once served from an endpoint, users can access it through any Intertext client on any device or platform in a similar fashion to an internet browser. Intertext clients receive and render UIUDL most appropriately based on the host device and platform. Intertext allows users to browse all their data sources through the same familiar, stable, robust, accessible, screen/device optimized interface. IUIDL is agnostic of style, so users can customize the look and feel. Most importantly, Intertext clients do not accept executable code from external sources and all interactions with the device and external servers are controlled, which guarantees safety and privacy to the users. Intertext aims to stand as an alternative to traditional front-end systems that greatly benefit both the user and the data provider.
