--- a/thesis/paper/sections/abstract.tex
+++ b/thesis/paper/sections/abstract.tex
@@ -6,4 +6,4 @@ Intertext proposes a novel approach to how front-end systems are developed and c
 
 Today, we often see the same repeating patterns in front-end systems, from the components that make up the user interface to features and practices such as navigation, routing and state management. It is not uncommon for developers to re-implement these patterns repeatedly, and due to the lack of a systematic enforcement mechanism in the open market, these implementations' correctness and completeness rely primarily on the developer. A proper online representation nowadays requires the developer to build accessible front-end applications with best practices optimized for various devices, browsers, screens and platforms, often resulting in high costs or inconsistent, insecure and low-quality byproducts. From a users perspective, this entails a poor user experience and bring potential security and privacy concerns. 
 
-In order to address these problems, we propose Intertext. IUIDL provides a layout system and User Interface (UI) components that include input components to take user inputs and make applications interactive. It comes with commands that enable sending, receiving and handling data, managing application state, routing and much more. It supports interpolations and views derived from the application state. IUIDL can be assembled and served from a generic backend, where the business logic of the application shall live. Once served from an endpoint, users can access it through any Intertext client on any device or platform in a similar fashion to an internet browser. Intertext clients receive and render UIUDL most appropriately based on the host device and platform. Intertext allows users to browse all their data sources through the same familiar, stable, robust, accessible, screen/device optimized interface. IUIDL is agnostic of style, so users can customize the look and feel. Most importantly, Intertext clients do not accept executable code from external sources and all interactions with the device and external servers are controlled, which guarantees safety and privacy to the users. Intertext aims to stand as an alternative to traditional front-end systems that greatly benefit both the user and the data provider.
+In order to address these problems, we propose Intertext. IUIDL provides a layout system and User Interface (UI) components that include input components to take user inputs and make applications interactive. It comes with commands that enable sending, receiving and handling data, managing application state, routing and much more. It supports interpolations and views derived from the application state. IUIDL can be assembled and served from a generic backend, where the business logic of the application shall live. Once served from an endpoint, users can access it through any Intertext client on any device or platform in a similar fashion to an internet browser. Clients receive and render UIUDL most appropriately based on the host device and platform. It allows users to browse all their data sources through the same familiar, stable, robust, accessible, screen/device optimized interface. IUIDL is agnostic of style, so users can customize the application's look and feel to their liking. Most importantly, clients do not accept executable code from external sources and all interactions with the device and external servers are controlled, which guarantees safety and privacy to the users. Intertext aims to stand as an alternative to traditional front-end systems that significantly benefits both the user and the data provider.
