Updates from Overleaf

--- a/thesis/paper/sections/introduction.tex
+++ b/thesis/paper/sections/introduction.tex
@@ -31,6 +31,6 @@ As mentioned before, there is a lack of a systematic enforcement mechanism for f
 
 The word Providers refers to anyone who offers data and services to end-users, and it is safe to say that the providers also share the problems discussed under the Consuming Data section. The complexity of building a decent, well designed, accessible front-end experience, not even once but once per every client built for various platforms, forces providers to choose between supporting multiple devices, following best practices, creating a good experience. It is typically the case that providers cannot have it all initially, as it requires high costs and large teams. 
 
-Codesharing is one of the recent trends in front-end development gaining some traction, aiming to solve some of these problems mentioned above; by using technologies such as react-native, react-native-web and Flutter, one can have a single codebase that produces applications for multiple environments. Modern front-end libraries/frameworks typically abstract the view layer, making it possible to create applications for different environments by swapping the view layer and wiring it up to the logic layer, which seems to be the current cross-platform application development status quo. However, the issue that comes with this approach is the difficulty in reducing the codebases for different environments into one, as it is hard to address the various requirements and features of each platform. Even though it is possible to share some extent of the code, sometimes platforms are conceptually distinct, and the software for these platforms needs to be built differently. 
+Codesharing is one of the recent trends in front-end development gaining some traction, aiming to solve some of these problems mentioned above; using react-native, react-native-web or Flutter, one can have a single codebase that produces applications for multiple environments. Modern front-end libraries/frameworks typically abstract the view layer, making it possible to create applications for different environments by swapping the view layer and wiring it up to the logic layer, which seems to be the current cross-platform application development status quo. However, the issue that comes with this approach is the difficulty in reducing the codebases for different environments into one, as it is hard to address the various requirements and features of each platform. Even though it is possible to share some extent of the code, sometimes platforms are conceptually distinct, and the software for these platforms needs to be built differently. 
 
 Another pain point faced by providers is maintenance. The world of front-end development is an extremely fast-growing and evolving ecosystem. The changes are persistent, and at times breaking. There are thousands of tools, libraries, frameworks, SDKs available at the fingertips of developers at no cost. It is a common practice to make use of these libraries as they help with the development significantly. However, the diversity in the libraries used to build the software results in a diversity of maintenance problems. Even the most well-tested and maintained libraries could break after an update, causing a headache for the developers and hardship for the users.
