--- a/thesis/paper/sections/intertext.tex
+++ b/thesis/paper/sections/intertext.tex
@@ -2,14 +2,16 @@
 
 \chapter{Intertext}
 
-Intertext is a platform based on a very simple premise, it is a family of front-end applications that can interpret Intertext UIDL (User Interface Description Language), and generate appropriate front-ends for the host platform. Simply put, a provider wanting to create an Intertext application will create a generic backend that generates Intertext UIDL, and serves it from an endpoint, say at intertext.example.com. And users who wish to use this application will, just like in a web browser, pull up an Intertext client and visit the domain intertext.example.com. The Intertext client will then make a request to this domain and fetch the Intertext UIDL served by this endpoint, and generate the user interface as per the instructions received. Moreover, rather than rendering a simple static view it will perform some tasks such as accepting user input, navigating to different screens, making additional requests to fetch more data, keeping the UI updated and reading and writing some data to users local storage; all of which will again be orchestrated based on the instructions received by the backend in Intertext UIDL syntax. Intertext will have multiple software clients built natively for various platforms that can interpret Intertext UIDL in the most appropriate way; for instance users browsing an Intertext app through the smartphone app will receive an experience optimized for touch screens, command-line interface client users will receive an optimized experience for the command line, or a user browsing from a low-end device with limited capabilities will use the version optimized for low-performance devices to get a comfortable viewing experience. 
+Intertext is a platform based on a straightforward premise; it is a family of front-end applications that can interpret IUIDL and generate appropriate front-ends for the host platform. Simply put, a provider wanting to create an Intertext application creates a generic backend that generates IUIDL, and serves it from an endpoint, say at https://intertext.example.com. Users who wish to use this application pulls up an Intertext client on their preferred device or environment and visit this domain just like in a web browser. The Intertext client then requests this domain, fetch the IUIDL served by this endpoint, and generate the user interface as per the instructions received. Moreover, rather than rendering a simple static view, it performs some tasks such as accepting user input, navigating to different screens, making additional requests to fetch more data, keeping the UI updated and reading and writing some data to users local storage; all of which is again orchestrated based on the instructions received by the backend in IUIDL syntax. Intertext has multiple software clients built natively for various platforms that can interpret IUIDL most appropriately to the host device or platform. For instance, users browsing an Intertext app through a smartphone receives an experience optimized for touch screens, command-line interface client users receive an optimized experience for a text-based interface or a user browsing from a low-end device with limited capabilities use the version optimized for low-performance devices to get a comfortable viewing experience and so on. 
 
-Intertext gives providers a set of components to build and serve their UIs for their services. It is agnostic of what this service is, and given the involvement of a backend to handle all the logic, this service can be anything. In other words; users can enjoy their todo lists, habit tracker, notes, calendar, email client, social apps, news, weather etc. all through one single app, using the Intertext client of their choice. Providers can describe the components their user interface should consist of using Intertext UIDL, in a way that is agnostic of their styles. For instance, providers could specify using a “Call To Action” component, and specify certain properties such as what it should say and what it should do, but they cannot decide how it should look. Having a unified set of UI components brings many advantages, most notably consistency. Every single application on Intertext will look and feel the same, made out of components that users are familiar with. Customizability is another major advantage, users will be able to adjust the look and feel of these components, allowing them to personalize their browsing to their likings all across the platform applications. Last but not least, all components will come with accessibility built in. This is particularly important that with this approach, the accessibility implementations are not left to the developers responsibility, therefore users that are in need of certain accessibility aspects will be guaranteed to have the accessibility features they need for every single application on the Intertext platform. Moreover, Intertext will be an open platform, and Intertext UIDL will be well documented for developers to build client applications, allowing the community to develop very specific client applications that can interpret Intertext UIDL in meaningful ways to respond to very specific needs. Whether it is a VUI (Voice User Interface) client, a Tangible UI client, or even clients built for particular devices with specific requirements for targeting various communities or use cases, they will all be able to support all existing Intertext applications served from backend services.  
+Intertext gives providers a set of components to build and serve their UIs for their services.  Given the involvement of a backend to handle all the logic, this service can be anything. In other words, users can enjoy their todo lists, habit tracker, notes, calendar, email client, social apps, news, weather and so on, all through one single app, using the Intertext client of their choice. IUIDL is agnostic of styles; for instance, a provider could create a "Button" component and specify what it says and what it does, but they cannot specify its looks, thus creating unified styles and user experience. This unity brings many advantages, most notably, consistency. Every single application on Intertext looks and feels the same, made out of components that users are familiar with. Customizability is another significant advantage; users can adjust the look and feel of these components, allowing them to personalize their browsing experience for all applications on the platform. Lastly, all components are accessible from the ground up. Thanks to this approach, the accessibility implementations are not the developers' responsibility; therefore, users with specific needs are guaranteed to have the accessibility features they need for every application Intertext platform. 
 
-When it comes to privacy and security, the bottom line is that Intertext takes away the ability for providers to execute code on users devices. Applications running on Intertext clients are expected to implement all their application logic on the server side, and serve some instructions to the Intertext clients on what to do, how to function, what to show the user and so on. These instructions are a part of the Intertext UIDL, and they are purely based on data, nothing that is executable is allowed from the providers. Intertext allows applications of certain functions that are required to build a meaningful front-end application, for instance an application can instruct Intertext to store some data to the local storage, read some previously stored data, make requests and so on. Applications are also allowed to ask certain user data, such as access to camera (for devices that has one), notifications, location etc. however given that all these instructions are bits of data that could be read and understood by the Intertext client, it is essential for them to be communicated to the user and ask for permission before granting permission to the provider. Intertext by default blocks cross-origin requests, that means a provider serving data from an origin can only ask the Intertext client to make a request to the same origin. Local storage access is also bound to the origin, providers serving data from an origin cannot access the data stored by another origin, which prevents users to be traced across the web for targeted advertisements and such. And for transparency, it is a requirement that all the requests that go back and forth be displayed to the end users in a way that they could understand. This controlled approach guarantees maximum level of privacy and security. Last but not least, Intertext receives data from backend servers in small packages, and the entire communication between Intertext clients and the server can be encrypted. This encryption can be enforced by the Intertext client.
+Intertext is an open platform, and IUIDL is well documented for developers to build client applications, allowing the community to develop specific client applications that can interpret IUIDL in meaningful ways to respond to specific needs. Whether it is a VUI (Voice User Interface) client, a Tangible UI client, or even clients built for particular devices with specific requirements for targeting various communities or use cases, they can all support all existing Intertext applications served from backend services.  
 
-As convenient Intertext is for end users, it is the goal of this project to create advantages as attractive for data or service providers as well. It may not be the best option for all cases; such as for front-end heavy applications that require client-side computations, custom styles or advanced graphics. However for most cases it serves as an alternative front-end for providers that has so many advantages over building and maintaining front-end applications from scratch. To start with, it removes the necessity of building and maintaining front-end applications. Granted, there is an overhead of creating frontend business logic in the backend and to generate and serve the Intertext UIDL, however the effort required is nothing compared to all the hurdles mentioned earlier. Intertext is agnostic of where the data is coming from and has no opinions on how it is generated. Therefore, the providers can easily make use of their existing backend services to add in the front-end logic. Intertext UIDL is simple JSON-based and working with data is an essential part of every application, therefore it is a minor effort but greatly rewarding. Once a provider starts serving their front-end in Intertext UIDL, that means they immediately obtain front-end applications for every platform that Intertext supports. Furthermore, as more Intertext clients get built, either officially or by the community, their applications immediately start working with those clients without requiring any change. 
+When it comes to privacy and security, the bottom line is that Intertext takes away the providers' ability to execute code on users devices. Applications running on Intertext clients are expected to implement all their application logic on the server-side, serve some instructions to the Intertext clients on what to do, how to function, what to show the user and so on. These instructions are a part of the IUIDL, and they are purely XML-based data; no executables are allowed from the providers. Nevertheless, Intertext allows applications to use a specific set of functions required to build a meaningful front-end application. For instance, an application can instruct an Intertext client to take actions like storing data, reading previously stored data, or making requests. Applications are also allowed to ask for permissions for things like accessing the camera (for devices that have one), notifications or location. 
 
-Intertext creates equal opportunities for everyone. The advancements in backend technologies these days made creating backend services possible in ways that was never possible before. Service providers such as AWS, Google Cloud and Azure made spinning up a backend infrastructure with necessary components as simple as a few clicks, all without requiring significant DevOps skills. Their generous free tiers, scalable infrastructures and the recently emerging serverless technology pulled the costs down so significantly that anyone who is familiar with backend technologies can create an application that could scale up to serve hundreds of thousands of users. However, one of the biggest blockers in launching applications that could gain popularity and evolve into a successful startup is arguably the branding and quality of the front-end applications. An application that suffers from user-facing problems mentioned earlier doesn’t leave a good impression and creates a bad image, and it is rather uncommon for such applications to be taken seriously, regardless of the quality of the data and services provided. Those who can achieve a good user-facing presence while targeting multiple devices and platforms are commonly large companies with high development budgets. This hurts indie developers, particularly backend developers who do not specialize in front-end development but are capable of creating applications as personal projects that could easily qualify as a good product. This project aims to remove this hegemony of “judging a book by the cover”, when all the applications look the same and feel the same, they will be judged the same. Not only indie developers will have better chances of success, there will be more options for everyone.
+Intertext by default blocks cross-origin requests, meaning that a provider serving data from an origin can only ask the Intertext client to make a request to the same origin. Storage access is also bound to the origin; providers serving data from an origin cannot access the data stored by another origin, preventing users from being tracked across the web for targeted advertisements. Furthermore, all requests that go back and forth are displayed to the end-users in a user-friendly way for transparency. This controlled approach guarantees the maximum level of privacy and security.
 
-One of the potential future plans of the Intertext projects could be the efforts made in web syndication. Web syndication is a form of communication between service providers and clients, where services make their contents available to websites or clients in a standardized way. A popular example of this is RSS; the technology that allows services to offer a feed of their contents in a standardized xml syntax, and RSS clients to subscribe to multiple RSS sources and aggregate all content into one single feed for the users to easily consume. While Intertext already offers a somewhat similar experience where users can consume data through a standardized user interface, it is still not the case that data from multiple sources can be aggregated into one view. If it is ever the case that Intertext gains enough traction to attract end-users, application developers and build a community around itself, then it wouldn’t be unreasonable to think that it can introduce similar standards in which the applications could offer designated endpoints to accept query parameters in a standardized format and return Intertext UIDL in a standardized format. This could allow Intertext clients to offer RSS-reader-like functionality allowing users to consume data from many different sources into one single view. Furthermore, combining this concept with the power already offered by Intertext clients and Intertext UIDL, experiences significantly richer than what was possible with technologies like RSS could be made possible. For example, a dedicated “social media endpoint standard” could be introduced by Intertext, and social media services that offer Intertext applications could create endpoints that comply with this standard. Then feeds from these multiple sources could be gathered in one dedicated “social media view”. The standard like, dislike, comment etc. interactions would function and update the relevant source again in a standardized way.
+As convenient as Intertext is for end-users, this project aims to create advantages as attractive for data or service providers. It may not be the best option for all cases, such as front-end-heavy applications requiring client-side computations, custom styles or advanced graphics. However, for most cases, it has many advantages over building and maintaining front-end applications from scratch. Creating front-end business logic in the backend might be an overhead; however, the effort required is nothing compared to all the hurdles mentioned earlier. Intertext is agnostic of where the data is coming from and has no opinions on how it is generated. Therefore, the providers can easily use their existing backend services to add in the front-end logic. IUIDL is XML-based, and working with data is an essential part of every application; it is a light effort but greatly rewarding. Once a provider starts serving their front-end in IUIDL, that means they immediately get front-end applications for every platform that Intertext supports. Furthermore, as more Intertext clients get built, either officially or by the community, their applications immediately start working with those clients without requiring any change. 
+
+Intertext creates equal opportunities for everyone. The advancements in backend technologies these days made creating backend services possible in ways that were never possible before. Service providers such as AWS, Google Cloud and Azure made spinning up a backend infrastructure with necessary components as simple as a few clicks, all without requiring DevOps skills. Their generous free tiers, scalable infrastructures and the recently emerging serverless technology pulled the costs down so significantly that anyone familiar with backend technologies can create an application that could scale up to serve hundreds of thousands of users. However, one of the biggest blockers in launching applications that could gain popularity and evolve into a successful startup is arguably the branding and quality of the front-end applications. An application that suffers from user-facing problems mentioned earlier does not leave a good impression and creates a bad image, and it is relatively uncommon for such applications to be taken seriously, regardless of the quality of the data and services provided. Those who can achieve an exceptional user-facing presence while targeting multiple devices and platforms are commonly large companies with high development budgets. These costs hurt indie developers, particularly backend developers who do not specialize in front-end development but can create applications as personal projects that could easily qualify as a good product. This project aims to remove this hegemony of "judging a book by the cover"; when all applications look the same and feel the same way, they are judged the same way. Not only indie developers have better chances of success, but there are also be more options for everyone.
