--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -48,7 +48,7 @@
  \pagenumbering{arabic}
 
 % Sections
-\input{sections/introduction}
+\input{sections/introduction/introduction}
 \input{sections/relatedwork} 
 \input{sections/intertext} 
 
