Updates from Overleaf

--- a/thesis/paper/sections/introduction/researchQuestions.tex
+++ b/thesis/paper/sections/introduction/researchQuestions.tex
@@ -27,5 +27,5 @@ We have listed the problems that we are interested to solve in the section above
 \begin{enumerate}
   \item brings product development costs to a minimum?
   \item enables more variability of software products in the market?
-  \item unifies the viewing experience, so individual developers and large companies compete on the same ground?
+  \item unifies the experience, so individual developers and large companies compete on the same ground?
 \end{enumerate}
