--- a/thesis/paper/sections/abstract.tex
+++ b/thesis/paper/sections/abstract.tex
@@ -6,4 +6,4 @@ Today, we often see the same repeating patterns in front-end systems, from the c
 
 To address these problems, we propose Intertext, a novel approach to how front-end systems are developed and consumed by users. It consists of Intertext User Interface Description Language (IUIDL): a device, design and style agnostic XML-based markup language; and a family of software clients for web, mobile, desktop and various other platforms that can render IUIDL into fully functional front-ends.
 
-IUIDL provides a layout system, User Interface (UI) components and commands. It includes both input and output components, which can be combined with commands to make interactive applications. Commands enable sending, receiving and handling data, managing application state, routing and much more. It supports interpolations and views derived from the application state. IUIDL can be assembled and served from a generic backend, where the business logic of the application shall live. Once served from an endpoint, users can access it through any Intertext client on any device or platform in a similar fashion to an internet browser. Clients receive and render UIUDL most appropriately based on the host device and platform. It allows users to browse all their data sources through the same familiar, stable, robust, accessible, screen/device optimized interface. IUIDL is agnostic of style, so users can customize the application's look and feel to their liking. Most importantly, clients do not accept executable code from external sources and all interactions with the device and external servers are controlled, which guarantees safety and privacy to the users. Intertext aims to stand as an alternative to traditional front-end systems that significantly benefits both the user and the data provider.
+IUIDL provides essential building blocks, including a layout system, User Interface (UI) components and commands. It incorporates both input and output components, which can be used in conjunction with commands to make applications interactive. Commands enable sending, receiving and handling data, managing application state, routing and much more. It supports interpolations and views derived from the application state. IUIDL can be assembled and served from a generic backend, where the business logic of the application shall live. Once served from an endpoint, users can access it through any Intertext client on any device or platform in a similar fashion to an internet browser. Clients receive and render UIUDL most appropriately based on the host device and platform. It allows users to browse all their data sources through the same familiar, stable, robust, accessible, screen/device optimized interface. IUIDL is agnostic of style, so users can customize the application's look and feel to their liking. Most importantly, clients do not accept executable code from external sources and all interactions with the device and external servers are controlled, which guarantees safety and privacy to the users. Intertext aims to stand as an alternative to traditional front-end systems that significantly benefits both the user and the data provider.
