Updates from Overleaf

--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -9,7 +9,14 @@
   author   = {{Sacha Greif, Raphaël Benitte}},
   title    = {State of JS},
   year     = {2020},
-  url      = {https://2020.stateofjs.com/}
+  url      = {https://2020.stateofjs.com}
+}
+
+@Online{EricssonMobility2020,
+  author   = {Ericsson},
+  title    = {Ericsson Mobility Report},
+  year     = {2021},
+  url      = {https://www.ericsson.com/49220c/assets/local/mobility-report/documents/2020/emr-q4-2020-update.pdf}
 }
 
 @inproceedings{TrackingWeb,
