Updates from Overleaf

--- a/thesis/paper/sections/introduction/introduction.tex
+++ b/thesis/paper/sections/introduction/introduction.tex
@@ -8,10 +8,10 @@ The increasing demand in the diversity of devices and device families also incre
 
 \begin{figure}
   \centering
-  \includegraphics[width=5.2cm]{images/frontend_frameworks_2020.png}
-  \qquad
-  \includegraphics[width=5cm]{images/hybrid_frameworks_2020.png}
-  \caption{Percentage of respondents vs. number of frameworks used}%
+  \includegraphics[width=6.2cm]{images/sojs1.pdf}
+  \,
+  \includegraphics[width=6.2cm]{images/sojs2.pdf}
+  \caption{Number of frameworks used to Percentage of respondents}%
   \label{fig:num_of_frameworks_used}%
 \end{figure}
 
