Updates from Overleaf

--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -32,3 +32,12 @@
   title={Persistent Tracking in Modern Browsers},
   author={Solomos, Konstantinos and Kristoff, John and Kanich, Chris and Polakis, Jason}
 }
+
+@inproceedings{TheoreticalUIDLs,
+  title={A theoretical survey of user interface description languages: Preliminary results},
+  author={Guerrero-Garcia, Josefina and Gonzalez-Calleros, Juan Manuel and Vanderdonckt, Jean and Munoz-Arteaga, Jaime},
+  booktitle={2009 Latin American Web Congress},
+  pages={36--43},
+  year={2009},
+  organization={IEEE}
+}
