--- a/thesis/paper/sections/introduction/problemStatement.tex
+++ b/thesis/paper/sections/introduction/problemStatement.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../../thesis.tex
 
-\section{Problem Statement}
+\section{Problem Statement} \label{problemStatement}
 
 In this thesis, we group these hurdles mentioned above under three main categories; consuming data, privacy and security, and providing data. The consuming data section discusses end-users problems due to user interface and experience inconsistencies, and lack of device and accessibility support. The Privacy and Security section argues why there are no truly private and secure environments. Providing data section gives insights into the challenges faced by data and service providers in creating front-end applications.
 
