--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -49,7 +49,7 @@
 
 % Sections
 \input{sections/introduction/introduction}
-\input{sections/relatedwork} 
+\input{sections/relatedwork/relatedwork} 
 \input{sections/intertext} 
 
 % Appendix (optional)
