Updates from Overleaf

--- a/thesis/paper/sections/introduction/contributions.tex
+++ b/thesis/paper/sections/introduction/contributions.tex
@@ -4,6 +4,8 @@
 
 As discussed in the \nameref{problemStatement} (\ref{problemStatement}) section, Intertext ambitiously attempts to solve many different problems from various domains. A solution at this scale requires novelty, rethinking the current state of art instead of an incremental update. The biggest contribution of Intertext is to borrow existing concepts that are mostly academic and apply them to solve these real-world problems. With that said, here are some notable contributions:
 
+TODO: combine it in new ways
+
 \begin{itemize}
   \item We reviewed existing research on User Interface Description Languages (UIDLs) and other similar topics to outline ways to utilise these concepts to solve the aforementioned problems.
   \item We designed IUIDL; while doing so, we decided:
@@ -14,5 +16,5 @@ As discussed in the \nameref{problemStatement} (\ref{problemStatement}) section,
     \item How to overcome some limitation of XML in the most effective, clear and extendable way
   \end{itemize}
   \item We created an engine using Javascript / Typescript to perform common tasks of Intertext clients, such as parsing IUIDL and managing the application state
-  \item We created multiple software clients that can render IUIDL into functional front-ends optimised for the host device and customisable where possible
+  \item We created multiple software clients that can render IUIDL into functional front-ends optimised for the host device and are user customisable where possible
 \end{itemize}
