--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -41,3 +41,14 @@
   year={2009},
   organization={IEEE}
 }
+
+@article{DSRM,
+  title={A design science research methodology for information systems research},
+  author={Peffers, Ken and Tuunanen, Tuure and Rothenberger, Marcus A and Chatterjee, Samir},
+  journal={Journal of management information systems},
+  volume={24},
+  number={3},
+  pages={45--77},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
