--- a/thesis/paper/sections/abstract.tex
+++ b/thesis/paper/sections/abstract.tex
@@ -1,6 +1,6 @@
 
 
-\section*{Abstract}
+\section*{Abstract} \label{abstract}
 
 Today, we often see the same repeating patterns in front-end systems, from the components that make up the user interface to features and practices such as navigation, routing and state management. It is not uncommon for these patterns to be re-implemented time and again in various shapes or forms. Due to the lack of a systematic enforcement mechanism in the open market, these implementations' correctness and completeness rely primarily on the developer. A proper online representation nowadays requires accessible front-end applications with best practices optimised for various devices, browsers, screens and platforms, often resulting in high costs or inconsistent, insecure and low-quality byproducts. From a users perspective, this entails a poor user experience and bring potential security and privacy concerns. 
 
