--- a/thesis/paper/sections/introduction/introduction.tex
+++ b/thesis/paper/sections/introduction/introduction.tex
@@ -1,10 +1,10 @@
 % !TEX root = ../../thesis.tex
 
-\chapter{Introduction}
+\chapter{Introduction} \label{introduction}
 
 In recent decades, the rise of smart interconnected devices not only changed how we interact with information, but also introduced all-new ways of engaging with the world. The rise of smartphones enabled users to consume content and perform tasks on-the-go, tablets made people rethink the ways they work and travel, wearable devices made new sets of data available to the users and so on. Ericsson Mobility Report of February 2021 reveals that the number of connected devices has been steadily increasing ~\cite{EricssonMobility2020}, and with new devices and form-factors underway, such as smart glasses, smart vehicles and folding displays, this trend is likely to continue in the foreseeable future. 
 
-The increasing demand in the diversity of devices and device families also increased the demand for front-end application development, as it became more challenging and costly to have a decent user-facing online presence. This lead to advancements in front-end development; emerging new tools, techniques, frameworks, libraries, and SDKs made it possible to build consumer-facing products in ways that were never possible before. Nevertheless, the ever-growing front-end ecosystem and high user demands forced developers to spread their focus to overwhelming levels; a recent survey \textit{State of JavaScript} reveals that around TODO: CHECK THIS 60\% of developers use more than one Front-end framework, and for cross-platform frameworks, it is more than TODO: THIS IS WRONG 80\% ~\cite{StateOfJs2020} (Fig ~\ref{fig:num_of_frameworks_used}). This transformation did help create a large and dynamic market of consumer products, goods and services, though it did not come without some hurdles. In this thesis, we explore what these hurdles are and discuss how Intertext addresses them.
+The increasing demand in the diversity of devices and device families also increased the demand for front-end application development, as it became more challenging and costly to have a decent user-facing online presence. This lead to advancements in front-end development; emerging new tools, techniques, frameworks, libraries, and SDKs made it possible to build consumer-facing products in ways that were never possible before. Nevertheless, the ever-growing front-end ecosystem and high user demands forced developers to spread their focus to overwhelming levels; a recent survey \textit{State of JavaScript} reveals that around \hl{TODO: This is wrong ->} 60\% of developers use more than one Front-end framework, and for cross-platform frameworks, it is more than \hl{TODO: This is wrong ->} 80\% ~\cite{StateOfJs2020} (Fig ~\ref{fig:num_of_frameworks_used}). This transformation did help create a large and dynamic market of consumer products, goods and services, though it did not come without some hurdles. In this thesis, we explore what these hurdles are and discuss how Intertext addresses them.
 subfigure env
 \begin{figure}
   \centering
