--- a/thesis/paper/sections/introduction/researchQuestions.tex
+++ b/thesis/paper/sections/introduction/researchQuestions.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../../thesis.tex
 
-\section{Research Questions}
+\section{Research Questions} \label{researchQuestions}
 
 We have listed the problems that we are interested to solve in the section above. In light of these problems, we aim to answer the following questions in our research:
 
