--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -9,6 +9,7 @@
 %\usepackage{stmaryrd}
 %\usepackage{caption}
 %\usepackage{subcaption}
+\usepackage{soul}
 \usepackage{float}
 \usepackage{template/cisa}
 
