"combine them in new ways"

--- a/thesis/paper/sections/introduction/contributions.tex
+++ b/thesis/paper/sections/introduction/contributions.tex
@@ -2,9 +2,7 @@
 
 \section{Contributions} \label{contributions}
 
-As discussed in the \nameref{problemStatement} (\ref{problemStatement}) section, Intertext ambitiously attempts to solve many different problems from various domains. A solution at this scale requires novelty, rethinking the current state of art instead of an incremental update. The biggest contribution of Intertext is to borrow existing concepts that are mostly academic and apply them to solve these real-world problems. With that said, here are some notable contributions:
-
-\hl{TODO: combine it in new ways}
+As discussed in the \nameref{problemStatement} (\ref{problemStatement}) section, Intertext ambitiously attempts to solve many different problems from various domains. A solution at this scale requires novelty, rethinking the current state of art instead of an incremental update. The biggest contribution of Intertext is to borrow existing concepts that are mostly academic, combine them in new ways, and apply them to solve these real-world problems. With that said, here are some notable contributions:
 
 \begin{itemize}
   \item We reviewed existing research on User Interface Description Languages (UIDLs) and other similar topics to outline ways to utilise these concepts to solve the aforementioned problems.
