related work start

--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -52,3 +52,21 @@
   year={2007},
   publisher={Taylor \& Francis}
 }
+
+@inproceedings{UIDLTheoreticalSurvey,
+  title={A theoretical survey of user interface description languages: Preliminary results},
+  author={Guerrero-Garcia, Josefina and Gonzalez-Calleros, Juan Manuel and Vanderdonckt, Jean and Munoz-Arteaga, Jaime},
+  booktitle={2009 Latin American Web Congress},
+  pages={36--43},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{XMLCompliantUIDLs,
+  title={A review of XML-compliant user interface description languages},
+  author={Souchon, Nathalie and Vanderdonckt, Jean},
+  booktitle={International Workshop on Design, Specification, and Verification of Interactive Systems},
+  pages={377--391},
+  year={2003},
+  organization={Springer}
+}
