Updates from Overleaf

--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -70,3 +70,53 @@
   year={2003},
   organization={Springer}
 }
+
+@article{UIML,
+  title={UIML: an appliance-independent XML user interface language},
+  author={Abrams, Marc and Phanouriou, Constantinos and Batongbacal, Alan L and Williams, Stephen M and Shuster, Jonathan E},
+  journal={Computer networks},
+  volume={31},
+  number={11-16},
+  pages={1695--1708},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@inproceedings{XIML,
+  title={XIML: a common representation for interaction data},
+  author={Puerta, Angel and Eisenstein, Jacob},
+  booktitle={Proceedings of the 7th international conference on Intelligent user interfaces},
+  pages={214--215},
+  year={2002}
+}
+
+@article{TeresaXML,
+  title={A unified method for designing interactive systems adaptable to mobile and stationary platforms},
+  author={Patern{\`o}, Fabio and Santoro, Carmen},
+  journal={Interacting with Computers},
+  volume={15},
+  number={3},
+  pages={349--366},
+  year={2003},
+  publisher={Oxford University Press Oxford, UK}
+}
+
+@article{MariaXML,
+  title={MARIA: A universal, declarative, multiple abstraction-level language for service-oriented applications in ubiquitous environments},
+  author={Paterno', Fabio and Santoro, Carmen and Spano, Lucio Davide},
+  journal={ACM Transactions on Computer-Human Interaction (TOCHI)},
+  volume={16},
+  number={4},
+  pages={1--30},
+  year={2009},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{UsiXML,
+  title={USIXML: A language supporting multi-path development of user interfaces},
+  author={Limbourg, Quentin and Vanderdonckt, Jean and Michotte, Benjamin and Bouillon, Laurent and L{\'o}pez-Jaquero, V{\'\i}ctor},
+  booktitle={IFIP International Conference on Engineering for Human-Computer Interaction},
+  pages={200--220},
+  year={2004},
+  organization={Springer}
+}
