--- a/thesis/paper/sections/relatedWork/index.tex
+++ b/thesis/paper/sections/relatedWork/index.tex
@@ -2,7 +2,7 @@
 
 \chapter{Related Work} \label{relatedWork}
 
-In this section, we explore and discuss the research and state-of-the-art tools and technologies in this domain. We talk about academic research that has been done in this field or related to this field, and the available commercial tools, software and software libraries that aim to achieve a similar goal with Intertext.  We will compare and contrast and explain how Intertext is extending the existing solutions to do what it does. Moreover, we will look into similar tools and services and discuss why they are relevant to Intertext and what is to be learned regarding our research.
+This section explores and discusses the state-of-the-art research, tools, and technologies in this field or related to this field. First, we focus on existing UIDLs and how they compare to Intertext. We categorise them to demonstrate the relevancy as coherently as possible and investigate ones that fall into the same category with Intertext on a case-by-case basis. Then, we look into libraries and frameworks that aim to achieve a similar goal with Intertext. We will explain how Intertext is extending the existing solutions to do what it does. Moreover, we will explore commercially available tools and services and discuss why they are relevant to Intertext and what is to be learned from their efforts and success.
 
 \input{sections/relatedWork/relatedUIDLs}
 \input{sections/relatedWork/relatedLibraries}
