Updates from Overleaf

--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -120,3 +120,34 @@
   year={2004},
   organization={Springer}
 }
+
+@article{IntrusiveAds,
+  title={The economics of advertising and privacy},
+  author={Tucker, Catherine E},
+  journal={International journal of Industrial organization},
+  volume={30},
+  number={3},
+  pages={326--329},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@inproceedings{WebNotForAll,
+  title={Web not for all: a large scale study of web accessibility},
+  author={Lopes, Rui and Gomes, Daniel and Carri{\c{c}}o, Lu{\'\i}s},
+  booktitle={Proceedings of the 2010 International Cross Disciplinary Conference on Web Accessibility (W4A)},
+  pages={1--4},
+  year={2010}
+}
+
+@article{PWAs,
+  title={Progressive web apps: the definite approach to Cross-Platform development?},
+  author={Majchrzak, Tim A and Bi{\o}rn-Hansen, Andreas and Gr{\o}nli, Tor-Morten},
+  year={2018}
+}
+
+@misc{DarkMode,
+  title={The Rise of Dark Mode: A qualitative study of an emerging user interface design trend},
+  author={Eisfeld, Henriette and Kristallovich, Felix},
+  year={2020}
+}
