--- a/thesis/paper/sections/2_relatedWork/relatedUIDLs.tex
+++ b/thesis/paper/sections/2_relatedWork/relatedUIDLs.tex
@@ -14,6 +14,7 @@ Compiled refers to cases where UI descriptions are created at design time and ar
 
 \hl{TODO: BOSS?}
 \hl{TODO: SeescoaXML}
+\hl{TODO: OpenUIDL?}
 
 \subsubsection{Comparison}
 
