--- a/thesis/paper/sections/appendix.tex
+++ b/thesis/paper/sections/appendix.tex
@@ -1,2 +1,2 @@
-\chapter{Your Appendix} \label{App:AppendixA}
+\chapter{Appendix} \label{App:AppendixA}
 \addtocontents{toc}{\protect\setcounter{tocdepth}{0}}
